--- a/index.html
+++ b/index.html
@@ -5,67 +5,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chaithawat Sukhanon </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <img src="71403649_674040043083881_8883324310500933632_n.jpg" alt="รูปภาพของคุณ" width="300" height="300">
-    <h1>Chaithawat Sukhanon</h1>
-    <p>หน้าเพจนี้เป็นส่วนหนึ่งของวิชา <b>Selected Topics in CAI and DIT</b> สำหรับนักศึกษาปีรหัส 65</p>
-    <hr>
-    <h3>Favorite</h3>
-    <ul>
-        <li>HTML</li>
-        <li>Valorant</li>
-        <li>CSGO</li>
-    </ul>
-    <h3>ประสบการณ์การทำงาน (Work Experience)</h3>
-    <table>
-        <tr>
-            <th>
-                Year
-            </th>
-            <th>
-                Work Place
-            </th>
-        <tr>
-        </tr>
-            <td>2018 - 2023</td>
-            <td>Internship at 7-11</td>
-        </tr>
-        <tr>
-            <td>2023 - Present</td>
-            <td>Data Engineer at CPALL</td>
-        </tr>
-    </table>
-    <h3>ตำแหน่งงานที่ต้องการสมัคร</h3>
-    <ol>
-        <li>บริษัท gosoft ประเทศไทย ในตำแหน่ง Developer</li>
-        <li>บริษัท บริษัท ฟูจิตสึ เจเนอรัล (ประเทศไทย) จำกัด ในตำแหน่ง IT Support</li>
-    </ol>
-    <h3>Skills</h3>
+    <div class="profile" style= "background-color :2d1de1">
+        <img src="18121396_217485508739339_7757002559652477817_o.jpg" alt="รูปภาพของคุณ" width="300" height="300">
+        <h1>Chaithawat Sukhanon</h1>
+        <p>หน้าเพจนี้เป็นส่วนหนึ่งของวิชา <b>Selected Topics in CAI and DIT</b> สำหรับนักศึกษาปีรหัส 65</p>
+    </div>
+
+    <div class="middle">
+        <hr>
+        <h3>Favorite</h3>
+        <ul>
+            <li>HTML</li>
+            <li>Valorant</li>
+            <li>CSGO</li>
+        </ul>
+
+        <h3>ประสบการณ์การทำงาน (Work Experience)</h3>
+        <table>
+            <tr>
+                <th>Year</th>
+                <th>Work Place</th>
+            </tr>
+            <tr>
+                <td>2018 - 2023</td>
+                <td>Internship at 7-11</td>
+            </tr>
+            <tr>
+                <td>2023 - Present</td>
+                <td>Data Engineer at CPALL</td>
+            </tr>
+        </table>
+
+        <h3>ตำแหน่งงานที่ต้องการสมัคร</h3>
+        <ol>
+            <li>บริษัท gosoft ประเทศไทย ในตำแหน่ง Developer</li>
+            <li>บริษัท บริษัท ฟูจิตสึ เจเนอรัล (ประเทศไทย) จำกัด ในตำแหน่ง IT Support</li>
+        </ol>
+    </div>
+
+    <div class="bottom">
+        <h3>Skills</h3>
         <table style="border: dashed rgb(0, 0, 0) 2px;">
             <tr>
                 <td><table>
-                <tr>
-                    <td class = "blackpink">Java</td>
-                    <td class = "blackpink">⬛⬛⬜⬜⬜</td>
-                </tr>
-                <tr>
-                    <td class = "blackpink">SQL</td>
-                    <td class = "blackpink">⬛⬛⬜⬜⬜</td>
-                </tr>
-            </table></td>
+                    <tr>
+                        <td class="blackpink">Java</td>
+                        <td class="blackpink">⬛⬛⬜⬜⬜</td>
+                    </tr>
+                    <tr>
+                        <td class="blackpink">SQL</td>
+                        <td class="blackpink">⬛⬛⬜⬜⬜</td>
+                    </tr>
+                </table></td>
                 <td><table>
-                <tr>
-                    <td class = "blackpink">English Language</td>
-                    <td class = "blackpink">⬛⬛⬛⬜⬜</td>
-                </tr>
-                <tr>
-                    <td class = "blackpink">Python</td>
-                    <td class = "blackpink">⬛⬜⬜⬜⬜</td>
-                </tr>
-            </table></td>
+                    <tr>
+                        <td class="blackpink">English Language</td>
+                        <td class="blackpink">⬛⬛⬛⬜⬜</td>
+                    </tr>
+                    <tr>
+                        <td class="blackpink">Python</td>
+                        <td class="blackpink">⬛⬜⬜⬜⬜</td>
+                    </tr>
+                </table></td>
             </tr>
         </table>
-    <a href="contact.html">Touch Me</a>
+        <a href="contact.html">Touch Me</a>
+    </div>
 </body>
 </html>
